--- a/style.css
+++ b/style.css
@@ -14,4 +14,9 @@ body{
 
 .intro {
     display: flex;
+    align-items: center;
+    justify-content: center;
+    align-content: center;
+    flex-wrap: wrap;
+    flex-direction: column;
 }
