ddc2edcr4rd r3tgb 5

--- a/style.css
+++ b/style.css
@@ -27,7 +27,7 @@ body{
     
     .intro {
         display: flex;
-        align-items: center;
+        align-items: column;
         justify-content: center;
         align-content: center;
         flex-wrap: wrap;
