--- a/style.css
+++ b/style.css
@@ -20,13 +20,8 @@ body{
     flex-wrap: wrap;
     flex-direction: column;
 }
-  header{
-    .intro {
-        display: flex;
-        align-items:center;
-        justify-content: center;
-        align-content: center;
-        flex-wrap: wrap;
-        flex-direction: column;
-    }
+
+.equipe{
+    display: grid;
+    grid-template-columns: 33% 33% 33%;
 }
