--- a/style.css
+++ b/style.css
@@ -23,5 +23,9 @@ body{
 
 .equipe{
     display: grid;
-    grid-template-columns: 33% 33% 33%;
+    grid-template-columns: 33% 33% 33%
+}
+
+.foto-equipe{
+    width: 40%;
 }
