--- a/style.css
+++ b/style.css
@@ -21,7 +21,7 @@ body{
     flex-direction: column;
 }
 
-.equipe{
+#equipe{
     display: grid;
     grid-template-columns: 33% 33% 33%;
     text-align: center;
