--- a/style.css
+++ b/style.css
@@ -34,4 +34,7 @@ body{
 header a{
 color: black;
 text-decoration: none;
+display: flex;
+    align-items: center;
+    justify-content: space-around;
 }
