--- a/style.css
+++ b/style.css
@@ -38,3 +38,10 @@ display: flex;
     align-items: center;
     justify-content: space-around;
 }
+header{
+display: flex;
+flex-direction: row;
+flex-wrap: nowrap;
+justify-content: space-around;
+align-items: center;
+}
