--- a/style.css
+++ b/style.css
@@ -10,6 +10,7 @@ body{
 }
 .img-intro{
     width: 500px;
+
 }
 
 .intro {
@@ -44,4 +45,12 @@ flex-direction: row;
 flex-wrap: nowrap;
 justify-content: space-around;
 align-items: center;
+}
+
+header{
+<section style="
+    display: flex;
+    flex-direction: column;
+    align-items: flex-end;
+">flex
 }
